--- a/HTML/style.css
+++ b/HTML/style.css
@@ -2,3 +2,10 @@ h1{
     color: red ;
     font-size: 25px;
 }
+p{
+    color: blue;
+    font-size: 20px;
+}
+mark{
+    background-color: green;
+}
