--- a/SIG_HTML/Project/NetFlix Clone/style.css
+++ b/SIG_HTML/Project/NetFlix Clone/style.css
@@ -8,19 +8,46 @@
     position: relative;
     background-position: center center;
     background-repeat: no-repeat;
+    background-size: max(1200px, 100vw);
 }
 .main .box{
     height: 80vh;
     width: 100%;
-    opacity: 0.45;
-    background-color: black;
+    opacity: 0.50;
+    background-color: rgb(0, 0, 0);
     position: absolute;
     top: 0;
 }
 nav{
-    max-width: 80vw;
+    max-width: 60vw;
     margin: auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 70px;
+}
+nav img{
+    height: 80px;
+    color: red;
+    width: 125px;
+    position: relative;
+    z-index: 10;
+}
+nav button{
+    position: relative;
+    z-index: 10;
+    background-color: red;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+}
+.hero{
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    color: white;
+    position: relative;
 }
