--- a/SIG_HTML/Project/NetFlix Clone/style.css
+++ b/SIG_HTML/Project/NetFlix Clone/style.css
@@ -1,53 +1,67 @@
+@import url("https://fonts.googleapis.com/css2?family=Martel+Sans:wght@200;300;400;600;700;800;900&family=Pacifico&family=Poppins&display=swap");
+
 * {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
+  font-family: "Poppins", sans-serif;
 }
 .main {
-    background-image: url("image/bg.jpg");
-    height: 80vh;
-    position: relative;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: max(1200px, 100vw);
+  background-image: url("image/bg.jpg");
+  height: 80vh;
+  position: relative;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: max(1200px, 100vw);
 }
-.main .box{
-    height: 80vh;
-    width: 100%;
-    opacity: 0.50;
-    background-color: rgb(0, 0, 0);
-    position: absolute;
-    top: 0;
+.main .box {
+  height: 80vh;
+  width: 100%;
+  opacity: 0.5;
+  background-color: rgb(0, 0, 0);
+  position: absolute;
+  top: 0;
 }
-nav{
-    max-width: 60vw;
-    margin: auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 70px;
+nav {
+  max-width: 60vw;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 70px;
 }
-nav img{
-    height: 80px;
-    color: red;
-    width: 125px;
-    position: relative;
-    z-index: 10;
+nav img {
+  height: 80px;
+  color: red;
+  width: 125px;
+  position: relative;
+  z-index: 10;
 }
-nav button{
-    position: relative;
-    z-index: 10;
-    background-color: red;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
+nav button {
+  position: relative;
+  z-index: 10;
+  background-color: red;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
 }
-.hero{
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    color: white;
-    position: relative;
+nav button img {
+  width: 15px;
+  height: 15px;
+  margin: 0px;
+  padding: 0px;
+}
+.hero {
+  font-family: "Martel Sans", sans-serif;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  color: white;
+  position: relative;
+}
+.hero :first-child{
+    font-size: 48px;
+    font-weight: 900;
 }
