--- a/SIG_HTML/Project/NetFlix Clone/style.css
+++ b/SIG_HTML/Project/NetFlix Clone/style.css
@@ -7,20 +7,22 @@
 }
 .main {
   background-image: url("image/bg.jpg");
-  height: 80vh;
-  position: relative;
   background-position: center center;
-  background-repeat: no-repeat;
   background-size: max(1200px, 100vw);
+  background-repeat: no-repeat;
+  height: 644px;
+  position: relative;
 }
+
 .main .box {
-  height: 80vh;
+  height: 644px;
   width: 100%;
-  opacity: 0.5;
-  background-color: rgb(0, 0, 0);
+  opacity: 0.69;
   position: absolute;
   top: 0;
+  background-color: black;
 }
+
 nav {
   max-width: 60vw;
   margin: auto;
@@ -64,4 +66,14 @@ nav button img {
 .hero :first-child{
     font-size: 48px;
     font-weight: 900;
+}
+.hero :nth-child(2){
+    font-size: 24px;
+    font-weight: 300;
+}
+.hero :nth-child(3){
+    font-size: 14px;
+    font-weight: 200;
+    line-height: 1.5;
+    letter-spacing: 2px;
 }
