--- a/SIG_HTML/Project/NetFlix Clone/style.css
+++ b/SIG_HTML/Project/NetFlix Clone/style.css
@@ -41,6 +41,10 @@ nav img {
 nav button {
   position: relative;
   z-index: 10;
+}
+/* nav button {
+  position: relative;
+  z-index: 10;
   background-color: red;
   color: white;
   border: none;
@@ -52,7 +56,7 @@ nav button img {
   height: 15px;
   margin: 0px;
   padding: 0px;
-}
+} */
 .hero {
   font-family: "Martel Sans", sans-serif;
   height: calc(100% - 70px);
@@ -65,24 +69,54 @@ nav button img {
   gap: 25px;
   padding: 0 30px;
 }
-.hero> :nth-child(1) {
-    font-size: 48px;
-    font-weight: 900;
-    text-align: center;
+.hero > :nth-child(1) {
+  font-size: 48px;
+  font-weight: 900;
+  text-align: center;
 }
-.hero> :nth-child(2){
-    font-size: 24px;
-    font-weight: 300;
-    text-align: center;
+.hero > :nth-child(2) {
+  font-size: 24px;
+  font-weight: 300;
+  text-align: center;
 }
-.hero> :nth-child(3){
-    font-size: 14px;
-    font-weight: 200;
-    line-height: 1.5;
-    letter-spacing: 2px;
-    text-align: center;
+.hero > :nth-child(3) {
+  font-size: 14px;
+  font-weight: 200;
+  line-height: 1.5;
+  letter-spacing: 2px;
+  text-align: center;
 }
-.separation{
+.separation {
   height: 10px;
-  background-color: grey;
+  background-color: rgb(75, 75, 75);
+}
+.btn {
+  padding: 3px 8px;
+  background-color: white;
+  /* font-weight: bold; */
+}
+.btn-red {
+  background-color: red;
+  color: white;
+  padding: 3px 24px;
+  border-radius: 5px;
+  font-size: 20px;
+}
+.hero-buttons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+.main input {
+  padding: 7px 100px 7px 15px;
+  border-radius: 5px;
+  font-size: 12px;
+  font-weight: 900;
+  background-color: rgba(23, 23, 23, 0.7);
+  border: 1px solid rgba(23, 23, 23, 0.5);
+}
+.btn-red-sm {
+  background-color: red;
+  color: white;
 }
